syntax = "proto3";

package follow_service;
option go_package="./follow_service";
import "common.proto";

message FollowRQ {
  int32  opt = 1;  // 0-关注 1-取消
  int64  uid = 2;
  int64  fans = 3;
  int32  event_type = 4;
}

message FollowRS {
  common.ErrorInfo err = 1;
  int32  opt = 2;
  int64  uid = 3;
  int64  fans = 4;
  int32  event_type = 5; 
}

message GetFollowListRQ {
  int32   event_type = 1;
  int64   uid = 2;
}

message GetFollowListRS {
  int32   event_type = 1;
  int64   uid = 2;
  repeated int64 follow_list = 3;
  common.ErrorInfo err = 4;
}

message GetFansListRQ {
  int32   event_type = 1;
  int64   uid = 2;
}

message GetFansListRS {
  int32   event_type = 1;
  int64   uid = 2;
  repeated int64 fans_list = 3;
  common.ErrorInfo err = 4;
}


service Follow_service {
  rpc Follow(FollowRQ) returns(FollowRS);
  rpc GetFollowList(GetFollowListRQ) returns(GetFollowListRS);
  rpc GetFansList(GetFansListRQ) returns(GetFansListRS);
}
